First session, cookie and login

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<div>
-		<a href="page.html">Goto page</a>
+		<a href="login.html">LogIn</a>
 	</div>
 	<div id="app2">
 		<h2>app2:</h2>
